[package]
name = "rmenu"
version = "0.3.0"
authors = ["Jens Fredskov <jsfr@users.noreply.github.com>"]
edition = "2021"
description = """\
Shows a selector to search and select between a list of items.
Items are read from stdin. The selected result is printed to stdout.\
"""

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
cocoa = "0.24.1"
eframe = "0.21.3"
egui = "0.21.0"
font-kit = "0.11.0"
jaq-core = "0.9.0"
serde_json = "1.0.96"
