[package]
name = "rmenu_druid"
version = "0.3.0"
authors = ["Jens Fredskov <jsfr@users.noreply.github.com>"]
edition = "2021"
description = """\
Shows a selector to search and select between a list of items.
Items are read from stdin. The selected result is printed to stdout.\
"""

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
druid = { version = "0.8.2", features = ["im"] }
jaq-core = "0.9.0"
serde_json = "1.0.93"
