[package]
name = "rmenu_egui"
version = "0.3.0"
authors = ["Jens Fredskov <jsfr@users.noreply.github.com>"]
edition = "2021"
description = """\
Shows a selector to search and select between a list of items.
Items are read from stdin. The selected result is printed to stdout.\
"""

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
cocoa = "0.24.1"
eframe = "0.20.1"
egui = "0.20.1"
jaq-core = "0.9.0"
serde_json = "1.0.91"
