[package]
name = "rmenu_history"
version = "0.1.0"
authors = ["Jens Fredskov <jsfr@users.noreply.github.com>"]
edition = "2018"
include = ["src/**/*", "build.rs", "!**/*_test.*"]

[dependencies]
clap = "3.0.0-beta.2"
exitfailure = "0.5.1"
failure = "0.1.8"

[build-dependencies]
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
