[package]
name = "rmenu_history"
version = "0.3.0"
authors = ["Jens Fredskov <jsfr@users.noreply.github.com>"]
edition = "2021"
include = ["src/**/*", "build.rs", "!**/*_test.*"]
description = "Sorts a list of items based on a history file"

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.15", features = ["derive"] }
